fix legislator icon alignment

--- a/css/_sass/legislator-lookup.scss
+++ b/css/_sass/legislator-lookup.scss
@@ -144,7 +144,9 @@ section.how.results {
     }
 
     .fa {
+      display: block;
       font-size: 1em;
+      text-align: center;
       &, &:before {
         width: auto;
       }
